--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     
     <h1>Hello</h1>
-    
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, similique.</p>
 </body>
 </html>
