--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h1>Hello</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, similique.</p>
     <h3> text from github aaa</h3>
+
+
+    <script src="./app.js"></script>
 </body>
 </html>
