--- a/index.html
+++ b/index.html
@@ -3,14 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ToDo List</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     
-    <h1>Hello</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, similique.</p>
-    <h3> text from github aaa</h3>
+
+<div class="container">
+    <header>
+        <h1>Todo List</h1>
+    </header>
+    <div class="search">
+        <input id="input" type="text" placeholder="Add a Todo">
+        <button id="addBtn">Add</button>
+    </div>
+
+<div id="error">
+
+</div>
+
+    <ul>
+        
+    </ul>
+</div>
+
+
+
 
 
     <script src="./app.js"></script>
